MOJ-87 Improving readability, refactoring